# codegen-library-sample

./: CMakeLists.txt  EnvironmentalSensor.interface.json  README.md  SampleDevice.capabilitymodel.json  main.c  pnp_device.c  pnp_device.h
capability_model_lib/: CMakeLists.txt
capability_model_lib/include/: sample_device_impl.h
capability_model_lib/src/: pnp_schema_serializer.c
dcm_lib/: CMakeLists.txt
dcm_lib/include/: deviceinfo_interface.h  pnp_schema_serializer.h  pnp_schema_types.h  sensor_interface.h
dcm_lib/include/utility/: digitaltwin_client_helper.h
dcm_lib/src/: sample_device_impl.c
dt_interface_lib/: CMakeLists.txt
dt_interface_lib/src/: deviceinfo_interface.c  sensor_interface.c
dt_interface_lib/src/utility/: digitaltwin_client_helper.c
